--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "extensions": {
           "jupyter_dashboards": {
@@ -97,7 +97,7 @@
         "id": "QeRdEg4Cx3n5",
         "outputId": "cc8d79e8-0e9c-48e7-c544-97a335f72c35"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "06lNBgSuxi4q"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "id": "K6b9KUXt0aoV",
         "outputId": "acd5d8be-981b-4485-8af0-195f84310d5d"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1150,7 +1150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "kMi_BChfEhqK"
       },
@@ -1174,7 +1174,7 @@
       "metadata": {
         "id": "vAjEVr7g5sj2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1190,7 +1190,7 @@
       "metadata": {
         "id": "GchFC_pkOHDz"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1208,7 +1208,7 @@
         "id": "A0zBEN9nScOZ",
         "outputId": "eec13dcd-da9f-479e-b1c0-32f1d45cf1f6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1235,7 +1235,7 @@
       "metadata": {
         "id": "700ffITYT224"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1256,7 +1256,7 @@
         "id": "Eg2NztC_Z9gk",
         "outputId": "5e3a7ef8-5515-43eb-8fcd-73ab853437de"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
         "id": "pZx-K3ypA0El",
         "outputId": "1560263a-1776-4a03-80e8-411806c4ac2e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1541,7 +1541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "yVvNed8GEhqL",
         "colab": {
@@ -1608,13 +1608,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "gJK1ycgslXLJ",
         "outputId": "23f5d65b-1a83-4691-ef49-2d8329be86c0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1790,7 +1789,7 @@
         "id": "H7ODA54wDbu2",
         "outputId": "c3744edb-cdb8-44cf-c858-997e098d1538"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1897,7 +1896,7 @@
         "id": "fVpUmtaIjfQ4",
         "outputId": "a99902ab-ed8e-43d0-ad76-4b1cded86bf6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1933,7 +1932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "HbSYY3WeEhqM",
         "colab": {
@@ -2646,7 +2645,7 @@
         "id": "TM6sH21xezBD",
         "outputId": "ca58473f-1513-4512-a2bf-3fde879b5dc1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2694,7 +2693,7 @@
         "id": "fABQ4OwJHwCL",
         "outputId": "56728de5-7fb9-451e-97c4-e9ba6d1c9c03"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2723,7 +2722,7 @@
         "id": "P9Ergoj9KqjC",
         "outputId": "e8b99fc2-fad9-4569-8478-6e65e15af4c8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2768,7 +2767,7 @@
         "id": "fAuqIb5nN_x3",
         "outputId": "3f941c67-0087-4bab-910b-f1358dd19859"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2808,7 +2807,7 @@
         "id": "EKZt7S3YAvfW",
         "outputId": "7476e8ec-c84b-4ee5-a75a-29c1735574a3"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2853,7 +2852,7 @@
         "id": "GfSvjVmSRDoB",
         "outputId": "b3f06f94-5464-4ef6-b422-2905c6fcedff"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2883,7 +2882,7 @@
         "id": "db4dxiu5RFKU",
         "outputId": "2ef58ac6-963e-4bb9-9f0a-96e8d2b59b03"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2913,7 +2912,7 @@
         "id": "KOjPdbDLRF_n",
         "outputId": "bbd59de7-45c4-4ba1-ae42-cefe42a4d62c"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2943,7 +2942,7 @@
         "id": "6BmExDQ2RGv5",
         "outputId": "24b51e88-0303-41a2-a1ed-2467ba6e4f5a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2972,7 +2971,7 @@
         "id": "t00ojJSpEfan",
         "outputId": "987f32fe-4c3e-4278-acef-63256a34e872"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3008,7 +3007,7 @@
         "id": "aYmhO7JLtp-8",
         "outputId": "e86083ea-6245-4e09-c41b-3747dc447994"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3045,13 +3044,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "FQIiIHCQusOp",
         "outputId": "ca0da039-9d08-4596-fb4c-3d81f4b7ce27"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3582,7 +3580,7 @@
         "id": "ZJC1puE_Yxu7",
         "outputId": "9c44e51e-3fc7-47f3-c704-58d8c9888a4c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3620,7 +3618,7 @@
         "id": "h4WNeGe3iJk8",
         "outputId": "69b32f79-2ded-4e56-be70-8dda0a75596d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3647,7 +3645,7 @@
         "id": "WjihVZwNbqAH",
         "outputId": "79817561-14fc-4f85-83c0-338b9d131da0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3674,7 +3672,7 @@
         "id": "koPnys58iHHn",
         "outputId": "d0f6b776-cb79-43e7-f23d-a60944db85e0"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3701,7 +3699,7 @@
         "id": "19_gWlKF0uKl",
         "outputId": "c58aaa34-460f-4cde-bab4-fc254d960916"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3737,7 +3735,7 @@
         "id": "a5NgAXTZynUO",
         "outputId": "f334bbd4-7d01-4b92-f130-57853c270f1b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3771,7 +3769,7 @@
         "id": "eH89PeEQyp34",
         "outputId": "69036e53-6c06-4f22-9009-39701d859a50"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3987,7 +3985,7 @@
         "id": "NfycQ8-M8U9O",
         "outputId": "fd7bf95a-7144-43a4-fe01-2cc2e791be07"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4262,7 +4260,7 @@
         "id": "m8WUBXOPy16q",
         "outputId": "fdc74ad6-db17-48a5-bd9d-8aad532a05de"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4301,7 +4299,7 @@
         "id": "Imzen80xT8e2",
         "outputId": "5627b30d-82a5-4af4-b344-26f705100264"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4328,7 +4326,7 @@
         "id": "moqedXnE1CQ7",
         "outputId": "7d66ea89-bb0c-4182-bf5d-c9b3e3daf5d5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4432,6 +4430,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#making a copy of df1 -> twitter-archive-enhanced.csv \n",
         "df1_clean = df1.copy()"
       ],
       "metadata": {
@@ -4479,12 +4478,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "5DDXVCB4EhqP",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c93aaf62-b40e-4123-8c60-eeb98ffddf75"
       },
@@ -4951,7 +4949,7 @@
         "id": "zxQFvwkPZV1U",
         "outputId": "96c4e3a1-3738-4946-e9ba-9997f5dad77a"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4991,7 +4989,7 @@
       "metadata": {
         "id": "LHNrUq-_bFbh"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5005,7 +5003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "ffPef6_VEhqP",
         "colab": {
@@ -5062,7 +5060,7 @@
         "id": "GXArPd7S3u_4",
         "outputId": "a02e4777-cd09-4284-c121-68480a6481f6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5166,7 +5164,7 @@
       "metadata": {
         "id": "7EFdsRbCuSp8"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5193,7 +5191,7 @@
         "id": "iFgZCtYfyigT",
         "outputId": "c3670ce8-fd98-4ed8-dd58-e084d674609d"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5265,7 +5263,7 @@
       "metadata": {
         "id": "cpwrJp_Qy1AQ"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5290,7 +5288,7 @@
         "id": "RB80v8UF7Bid",
         "outputId": "aca96a25-9459-4f37-9c2b-1d3727d32c2e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5366,7 +5364,7 @@
         "id": "QJ3cgwIB8AcZ",
         "outputId": "4c148661-d3c4-4584-909f-539fb439f0a5"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5407,7 +5405,7 @@
       "metadata": {
         "id": "4dtlbJVO--gV"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5432,7 +5430,7 @@
         "id": "152g_gWMFjyO",
         "outputId": "dca99451-295f-496d-f8d6-eac22cae6618"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5460,7 +5458,7 @@
         "id": "9hyHa8H_FWN7",
         "outputId": "3e4c46e0-b4dc-4f18-88ce-f16e80db6554"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5487,7 +5485,7 @@
         "id": "YCls42mXGSHr",
         "outputId": "299f8af5-f9dd-4f9c-c4d3-c3ba46728a63"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5565,7 +5563,7 @@
         "id": "_O9FVKRDI_XI",
         "outputId": "c2a2574a-1aa0-4363-ddc2-02f091394ec9"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5599,7 +5597,7 @@
       "metadata": {
         "id": "PROOmG-lJg8F"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5615,7 +5613,7 @@
         "id": "Q2VvDtEoKTxB",
         "outputId": "ed6ee14c-1fca-4cd3-a77d-16920c858e4f"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5652,7 +5650,7 @@
       "metadata": {
         "id": "dmgLmhWTLcLT"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5677,7 +5675,7 @@
         "id": "66sgTWwNvU_7",
         "outputId": "4db4b14f-9e6e-4eaa-ee76-530b1b28020e"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5716,7 +5714,7 @@
         "id": "QwAlRIqwMTS3",
         "outputId": "b3a2190c-3d14-4967-f5d5-04ab254958fa"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5795,7 +5793,7 @@
         "id": "IXq4QbE-811Q",
         "outputId": "9a9a411f-ad2c-43b0-fa08-00e823af2b81"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5829,7 +5827,7 @@
       "metadata": {
         "id": "BCEJRmdJLbZ6"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5854,7 +5852,7 @@
         "id": "3errim6QM3Gg",
         "outputId": "77321c93-1c9e-4dea-d407-9e66b726b82f"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5892,7 +5890,7 @@
         "id": "f5IgcJeYNZOm",
         "outputId": "4ac82b9c-bec4-467d-f421-cdaf78a3f1f0"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6260,7 +6258,7 @@
       "metadata": {
         "id": "w20-Hb1onFR-"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6322,7 +6320,7 @@
         "id": "TXavOKxHWSog",
         "outputId": "9bec3c9a-9b7c-4405-f665-de98a60524cf"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6709,7 +6707,7 @@
         "id": "HpCojVL4VqYW",
         "outputId": "32db8e49-bbb5-4ede-fd32-de65d2fbf9fd"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6770,7 +6768,7 @@
         "id": "rf_eCgE2ZBCQ",
         "outputId": "79b453da-3113-4612-f43a-966da60bb981"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7142,7 +7140,7 @@
       "metadata": {
         "id": "pHvJHn4jdPiI"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7159,7 +7157,7 @@
         "id": "nSW3NOToZPLw",
         "outputId": "972336ee-7c12-40a1-8982-4b097c07a278"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7928,7 +7926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "SionhXR9EhqR"
       },
@@ -7947,7 +7945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "oDp0TDT8EhqS"
       },
@@ -7980,7 +7978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "FGOIPUHsEhqT"
       },
