--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/cJQXIJtY+MgsUO6WR7IV",
+      "authorship_tag": "ABX9TyOZyq+hT7ZPCxOChotSmGnp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,11 +48,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I was able to flag some anomalies in the different data frames and these include but were not limited to:\n",
+        "While assessing the dataframes I was able to flag some anomalies in the different data frames which include but were not limited to:\n",
         "\n",
-        "*Quality Issues*\n",
+        "Quality Issues\n",
         "\n",
-        "-In df1: **twitter-archive.csv**, out of the 2356 entries in each column of this dataframe:\n",
+        "-In *df1: **twitter-archive.csv***, out of the 2356 entries in each column of this dataframe:\n",
         "\n",
         "* 2278 values in 'in_reply_to_status_id' column are missing\n",
         "\n",
@@ -82,10 +82,35 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The main instances in the quality issues were **missing values**s **data inaccuracy** and **data inconsistency**. To fix:\n",
+        "\n",
+        "1. *2278 values in 'in_reply_to_status_id' column are missing* - \n",
+        "I dropped this column since most of its entries were empty. Out of the 2356 entries in this column, 2278 were missing and having such a column would render our data untrustworthy which had to be deleted. "
+      ],
+      "metadata": {
+        "id": "wjXaa3ZLm9oD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">>>>>$\\frac{2278}{2356} = {0.9668}$\n",
+        "\n",
+        "\n",
+        "\n",
+        ">>>>tabulated as percentage of **96.68 %**"
+      ],
+      "metadata": {
+        "id": "Ejj-svJP77OY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lpntNwMbhYoy"
+        "id": "WWqr84Lw78R1"
       },
       "execution_count": null,
       "outputs": []
