--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZyq+hT7ZPCxOChotSmGnp",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNu+tjyeU7jy/GTA+cytIGp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Reporting: wragle_report\n",
-        "Create a 300-600 word written report called \"wrangle_report.pdf\" or \"wrangle_report.html\" that briefly describes your wrangling efforts. This is to be framed as an internal document."
+        "# Reporting: wragle_report\n"
       ],
       "metadata": {
         "id": "FCcg6-zfD1ma"
@@ -84,10 +84,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Cleaning the data frames"
+      ],
+      "metadata": {
+        "id": "1DTP-H2jIPwL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The main instances in the quality issues were **missing values**s **data inaccuracy** and **data inconsistency**. To fix:\n",
         "\n",
-        "1. *2278 values in 'in_reply_to_status_id' column are missing* - \n",
-        "I dropped this column since most of its entries were empty. Out of the 2356 entries in this column, 2278 were missing and having such a column would render our data untrustworthy which had to be deleted. "
+        "* *2278 values in 'in_reply_to_status_id' column are missing* - \n",
+        "I dropped this column since most of its entries were empty. Out of the 2356 entries in this column, 2278 were missing and having such a column would render our data untrustworthy which had to be deleted. t"
       ],
       "metadata": {
         "id": "wjXaa3ZLm9oD"
@@ -96,24 +105,77 @@
     {
       "cell_type": "markdown",
       "source": [
-        ">>>>>$\\frac{2278}{2356} = {0.9668}$\n",
+        "To further clean more **missing values** cases, after assessing and noting that:"
+      ],
+      "metadata": {
+        "id": "AZ5JCHPTEj2l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* *The 'retweeted_status_id' column had 2175 missing values*\n",
         "\n",
+        "* *There were 2175 null values in the 'retweeted_status_user_id' column too*\n",
         "\n",
+        "* *In the 'retweeted_status_timestamp' column 2175 values were missing*"
+      ],
+      "metadata": {
+        "id": "u7-3ifsvEBrR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "drawing a percentage attribute of **92.31 %** of missing value in the named columns,\n",
         "\n",
-        ">>>>tabulated as percentage of **96.68 %**"
+        ">>>>$\\frac{2175}{2356} = {0.9231}$\n",
+        "\n",
+        ">>>>*0.9231* x *100%* = **92.31 %**"
       ],
       "metadata": {
         "id": "Ejj-svJP77OY"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "I deciced to drop these columns. This will ensure a more accurate data set that can be used to draw meaningful insights. I further deleted the column 'in_reply_to_user_id' column which had 2278 missing values and would clearly derive above 90% of missing value in the 'in_reply_to_user_id' column like in previous dropped columns. The 'expanded_url' column had few rows with missing values too. In this case, I dropped the few rows which had the missing values. "
+      ],
       "metadata": {
-        "id": "WWqr84Lw78R1"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "jcv8tIHlHPEg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Most entries of the 'rating_denominator' were '10' but in other cases they are different. Some are '50' '120' '90' '150' '130' '2' '11' e.t.c. For this data's consistency it was best to keep the data with ratings denominatoer entries equall to 10 and drop all other rows with varrying 'rating_denominator' values. "
+      ],
+      "metadata": {
+        "id": "I1-k1FiDKA-I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I equally noted that some dogs had no names thus indicating missing values in 'name' column. To clean this quality issue the rows which had no names of dogs were dropped. Some dogs had been named inaccurately and incorrectly with just letters like 'a'. Conventionally, 'a' would not be considered as name and therefore the columns with such names were dropped too."
+      ],
+      "metadata": {
+        "id": "NYWOTi_bMX6R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On the quality issue like *Some rows in the twitter-archive-enhanced.csv file 'name' column ' had an entry 'None'* - an entry 'None' is not proper to be considered as a name. I replaced 'None' with 'Nan' which would leave data with missing values in the modified areas. The rows with the missing names would further be deleted.\n",
+        "\n",
+        "*Some entries in twitter-archive-enhanced.csv file 'text' column ought to be in other fields or other dataset*. The assessing steps drove discoveries that these texts were not original tweets but retweets, identified starting with a string of text RT. For this issue, each retweet text from the data set was deleted as they should belong in a seperate data set preferably a retweets data set.\n",
+        "\n",
+        "The three data frames were then joined to form one data frame using the columns' 'tweet_id' which was common in all data frames. This merged data frame would be saved and stored as the master data set,  twitter_archive_master.csv file. "
+      ],
+      "metadata": {
+        "id": "egORnYu7NLRv"
+      }
     }
   ]
 }
