--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Reporting: wragle_report\n"
+        "# Reporting: Wrangle_report\n"
       ],
       "metadata": {
         "id": "FCcg6-zfD1ma"
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This project enatailed wrangling data from Twitter about different dogs. Theree different data sets containing different information about dogs from twitter were collected using different methods from  twitter sources, assessed, merged and cleaned to create a master data set. The wrangling efforts began by visually and programattically assessing the data frames individually as CSV files using Google Sheets, and later as data frames using Pandas, Numpy, Python Programming Language and other related programming packages. "
+        "This project entailed wrangling data from Twitter about different dogs. Three different data sets containing different information about dogs from twitter were collected using different methods from  twitter sources, assessed, merged and cleaned to create a master data set. The wrangling efforts began by visually and programattically assessing the data frames individually as CSV files using Google Sheets, and later as data frames using Pandas, Numpy, Python Programming Language and other related programming packages. "
       ],
       "metadata": {
         "id": "vTk6-_sNf-j8"
@@ -48,7 +48,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "While assessing the dataframes I was able to flag some anomalies in the different data frames which include but were not limited to:\n",
+        "While assessing the different dataframes, I was able to flag some anomalies which include but were not limited to:\n",
         "\n",
         "Quality Issues\n",
         "\n",
@@ -68,7 +68,7 @@
         "\n",
         "* There is inconsitent data in the 'rating_denominator' column.\n",
         "\n",
-        "* Some dogs have no names i.e Missing values in 'name' column.\n",
+        "* Some dogs have no names i.e missing values in 'name' column.\n",
         "\n",
         "* Some dogs have been named inaccurately and incorrectly with just letters like 'a'.\n",
         "\n",
@@ -171,7 +171,7 @@
         "\n",
         "*Some entries in twitter-archive-enhanced.csv file 'text' column ought to be in other fields or other dataset*. The assessing steps drove discoveries that these texts were not original tweets but retweets, identified starting with a string of text RT. For this issue, each retweet text from the data set was deleted as they should belong in a seperate data set preferably a retweets data set.\n",
         "\n",
-        "The three data frames were then joined to form one data frame using the columns' 'tweet_id' which was common in all data frames. This merged data frame would be saved and stored as the master data set,  twitter_archive_master.csv file. "
+        "The three data frames were then joined to form one data frame using the column - 'tweet_id' which was common in all data frames. This merged data frame would be saved and stored as the master data set,  twitter_archive_master.csv file. "
       ],
       "metadata": {
         "id": "egORnYu7NLRv"
