--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -66,7 +66,7 @@
         "\n",
         "* The 'expanded_url' column has some missing value\n",
         "\n",
-        "* There is inconsitent data in the 'rating_denominator' column.\n",
+        "* There is inconsistent data in the 'rating_denominator' column.\n",
         "\n",
         "* Some dogs have no names i.e missing values in 'name' column.\n",
         "\n",
@@ -93,7 +93,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The main instances in the quality issues were **missing values**s **data inaccuracy** and **data inconsistency**. To fix:\n",
+        "The main instances in the quality issues were **missing values**, **data inaccuracy**, and **data inconsistency**. To fix:\n",
         "\n",
         "* *2278 values in 'in_reply_to_status_id' column are missing* - \n",
         "I dropped this column since most of its entries were empty. Out of the 2356 entries in this column, 2278 were missing and having such a column would render our data untrustworthy which had to be deleted. t"
@@ -149,7 +149,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Most entries of the 'rating_denominator' were '10' but in other cases they are different. Some are '50' '120' '90' '150' '130' '2' '11' e.t.c. For this data's consistency it was best to keep the data with ratings denominatoer entries equall to 10 and drop all other rows with varrying 'rating_denominator' values. "
+        "Most entries of the 'rating_denominator' were '10' but in other cases they are different. Some are '50' '120' '90' '150' '130' '2' '11' e.t.c. For this data's consistency it was best to keep the data with ratings denominator entries equall to 10 and drop all other rows with varrying 'rating_denominator' values. "
       ],
       "metadata": {
         "id": "I1-k1FiDKA-I"
@@ -158,7 +158,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I equally noted that some dogs had no names thus indicating missing values in 'name' column. To clean this quality issue the rows which had no names of dogs were dropped. Some dogs had been named inaccurately and incorrectly with just letters like 'a'. Conventionally, 'a' would not be considered as name and therefore the columns with such names were dropped too."
+        "I equally noted that some dogs had no names thus indicating missing values in 'name' column. To clean this quality issue, the rows which had no names of dogs were dropped. Some dogs had been named inaccurately and incorrectly with just letters like 'a'. Conventionally, 'a' would not be considered as name and therefore the columns with such names were dropped too."
       ],
       "metadata": {
         "id": "NYWOTi_bMX6R"
@@ -169,7 +169,7 @@
       "source": [
         "On the quality issue like *Some rows in the twitter-archive-enhanced.csv file 'name' column ' had an entry 'None'* - an entry 'None' is not proper to be considered as a name. I replaced 'None' with 'Nan' which would leave data with missing values in the modified areas. The rows with the missing names would further be deleted.\n",
         "\n",
-        "*Some entries in twitter-archive-enhanced.csv file 'text' column ought to be in other fields or other dataset*. The assessing steps drove discoveries that these texts were not original tweets but retweets, identified starting with a string of text RT. For this issue, each retweet text from the data set was deleted as they should belong in a seperate data set preferably a retweets data set.\n",
+        "*Some entries in twitter-archive-enhanced.csv file 'text' column ought to be in other fields or other datasets*. The assessing steps drove discoveries that these texts were not original tweets but retweets, identified starting with a string of text RT. For this issue, each retweet text from the data set was deleted as they should belong in a separate dataset, a retweets dataset.\n",
         "\n",
         "The three data frames were then joined to form one data frame using the column - 'tweet_id' which was common in all data frames. This merged data frame would be saved and stored as the master data set,  twitter_archive_master.csv file. "
       ],
