--- a/wrangle_report.ipynb
+++ b/wrangle_report.ipynb
@@ -52,7 +52,7 @@
         "\n",
         "Quality Issues\n",
         "\n",
-        "-In *df1: **twitter-archive.csv***, out of the 2356 entries in each column of this dataframe:\n",
+        "-In **df1: twitter-archive.csv**, out of the 2356 entries in each column of this dataframe:\n",
         "\n",
         "* 2278 values in 'in_reply_to_status_id' column are missing\n",
         "\n",
